[gd_scene load_steps=2 format=3 uid="uid://ddlq061r4cwv4"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_gameqd"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gameqd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.160784, 0.239216, 1)

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBar" type="MarginContainer" parent="UI"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="UI/TopBar"]
layout_mode = 2

[node name="ModeLabel" type="Label" parent="UI/TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Classic Mode"

[node name="StatsLabel" type="Label" parent="UI/TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Score: 0"
horizontal_alignment = 1

[node name="Controls" type="HBoxContainer" parent="UI/TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2
theme_override_constants/separation = 20

[node name="HintButton" type="Button" parent="UI/TopBar/HBox/Controls"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Hint"

[node name="PauseButton" type="Button" parent="UI/TopBar/HBox/Controls"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Pause"

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="GameTimer" type="Timer" parent="."]

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="UI/TopBar/HBox/Controls/HintButton" to="." method="_on_hint_pressed"]
[connection signal="pressed" from="UI/TopBar/HBox/Controls/PauseButton" to="." method="_on_pause_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
